<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="save">Simpan</string>
    <string name="delete">Hapus</string>

    <string name="history">Data Riwayat</string>
    <string name="data_is_empty">Data Riwayat Kosong</string>
    <string name="history_image">History image</string>
    <string name="accuracy_score">Akurasi: %s</string>
    <string name="view_more">View More</string>
    <string name="news_label">Tahukah Anda?</string>
    <string name="news_label_desc">Artikel berikut dipilih untuk membantu memahami topik kesehatan yang berkaitan dengan hasil analisa.
Bukan pengganti diagnosis medis.</string>
</resources>